fix margin-bottom to match column gap

--- a/twd-activity-list.css
+++ b/twd-activity-list.css
@@ -88,7 +88,7 @@ h3{
     border: 1px solid #d7df59;
     display: block;
     min-width: 200px;
-    margin-bottom: 10px !important;
+    margin-bottom: 20px !important;
     width: 100%;
     vertical-align: top;
     break-inside: avoid;
